[package]
name = "evm-execution"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[dependencies]
primitive-types = { version = "0.11.1", default-features = false }
hex-literal = "0.3.3"
evm-core = { default-features = false, git = "https://github.com/uniquenetwork/evm", branch = "unique-polkadot-v0.9.24" }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std"]
std = ["primitive-types/std", "evm-core/std"]
